# sway

./: .gitignore  .gitmodules  CMakeLists.txt
.github/workflows/: build.yml
Source/: ParameterIDs.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
web-ui/: index.html  package.json  vite.config.ts
web-ui/src/: App.tsx  index.css
web-ui/src/components/: SwayVisualizer.tsx
web-ui/src/hooks/: useJuceParam.ts  useVisualizerData.ts
web-ui/src/lib/: juce-bridge.ts
